syntax = "proto3";
option go_package = "https://github.com/PseudoMera/virtual-store/product/grpc";

package grpc;

service ProductService {
    rpc CreateProduct(CreateProductRequest) returns(CreateProductResponse) {}
    rpc GetProduct(GetProductRequest) returns(GetProductResponse) {}
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
    rpc UpdateProductRequest(Product) returns (SuccessResponse) {}
    rpc UpdateProductStock(UpdateProductStockRequest) returns (SuccessResponse) {}
}

message Product {
    int64 id = 1;
    string name = 2;
    float price = 3;
    int32 stock = 4;
}

message CreateProductRequest {
    string name = 1;
    float price = 2;
    int32 stock = 3;
}

message CreateProductResponse {
    int64 id = 1;
}

message GetProductRequest {
    int64 id = 1;
}

message GetProductResponse {
    Product product = 1;
}

message SuccessResponse {
    string msg = 1;
}

message GetProductsRequest {
    string name = 1;
}

message GetProductsResponse {
    repeated Product products = 1;
}

message UpdateProductStockRequest {
    int64 id = 1;
    int32 stock = 2;
}
